--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Property</h1>
-
-<%= render 'form', property: @property %>
-
-<%= link_to 'Back', properties_path %>
+<h1>Add new Property</h1>
+<div class = "new">
+  <%= link_to 'Back', properties_path %>
+  <%= render 'form', property: @property %>
+</div>
