--- a/app/assets/stylesheets/properties.scss
+++ b/app/assets/stylesheets/properties.scss
@@ -1,3 +1,54 @@
-// Place all the styles related to the properties controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+html {
+  font-family:  "游明朝体","YuMincho";
+  background-color:#4285F4 ;
+  margin: 0 auto;
+  text-align: center;
+}
+
+body {
+  font-family: serif;
+  font-weight: 100;    
+  display: contents;
+  margin: 0 auto;
+  text-align: center;
+
+}
+
+.index{
+  display: contents;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.show{
+  display: block;
+  margin: 0 50px;
+  padding: 30px 50px;
+  text-align: left;
+  background-color: white;
+  font-weight: lighter;
+  line-height: 180%;
+}
+
+.edit{
+  display: block;
+  margin: 0 50px;
+  padding: 30px 50px;
+  text-align: left;
+  background-color: white;
+  font-weight: lighter;
+  line-height: 180%;
+}
+
+.new{
+  display: block;
+  margin: 0 50px;
+  padding: 30px 50px;
+  text-align: left;
+  background-color: white;
+  font-weight: lighter;
+  line-height: 180%;
+}
+
+
+
