--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,35 +1,35 @@
-<p id="notice"><%= notice %></p>
+<div class = "index">
+  <p id="notice"><%= notice %></p>
+  <h1>賃貸情報</h1>
 
-<h1>Properties</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Rent</th>
-      <th>Address</th>
-      <th>Age</th>
-      <th>Note</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @properties.each do |property| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= property.name %></td>
-        <td><%= property.rent %></td>
-        <td><%= property.address %></td>
-        <td><%= property.age %></td>
-        <td><%= property.note %></td>
-        <td><%= link_to 'Show', property %></td>
-        <td><%= link_to 'Edit', edit_property_path(property) %></td>
-        <td><%= link_to 'Destroy', property, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th class="th">物件名</th>
+        <th class="th">賃料</th>
+        <th class="th">住所</th>
+        <th class="th">築年数</th>
+        <th class="th">備考</th>
+        <th class="th" colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New Property', new_property_path %>
+    <tbody>
+      <% @properties.each do |property| %>
+        <tr>
+          <td class="td"><%= property.name %></td>
+          <td class="td"><%= property.rent %></td>
+          <td class="td"><%= property.address %></td>
+          <td class="td"><%= property.age %></td>
+          <td class="td"><%= property.note %></td>
+          
+          <td><%= button_to 'show', property,method: :get, class: "button1"  %></td>
+          <td><%= button_to 'edit', edit_property_path(property),method: :get, class: "button1"  %></td>
+          <td><%= button_to 'destroy', property, method: :delete, data: { confirm: 'Are you sure?' },class: "button1"  %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <br>
+  <%= button_to '新規登録', new_property_path, method: :get, class: "button_link" %>
+</div>
