--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,29 +1,50 @@
-<p id="notice"><%= notice %></p>
+<h1>Show Property</h1>
+<div class = "show">
+  <%= link_to 'Edit', edit_property_path(@property) %> |
+  <%= link_to 'Back', properties_path %>
+    <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @property.name %>
-</p>
+    <p>
+      <strong>Name:</strong>
+      <%= @property.name %>
+    </p>
 
-<p>
-  <strong>Rent:</strong>
-  <%= @property.rent %>
-</p>
+    <p>
+      <strong>Rent:</strong>
+      <%= @property.rent %>
+    </p>
 
-<p>
-  <strong>Address:</strong>
-  <%= @property.address %>
-</p>
+    <p>
+      <strong>Address:</strong>
+      <%= @property.address %>
+    </p>
 
-<p>
-  <strong>Age:</strong>
-  <%= @property.age %>
-</p>
+    <p>
+      <strong>Age:</strong>
+      <%= @property.age %>
+    </p>
 
-<p>
-  <strong>Note:</strong>
-  <%= @property.note %>
-</p>
+    <p>
+      <strong>Note:</strong>
+      <%= @property.note %>
+    </p>
 
-<%= link_to 'Edit', edit_property_path(@property) %> |
-<%= link_to 'Back', properties_path %>
+    <div class="station_form">
+      <% n = 0 %>
+      <% @property.nearest_stations.each do |nearest_station| %>
+        <h2>最寄り駅<%= n += 1 %></h2>
+          <p>
+            <strong>路線名:</strong><%= nearest_station.line %>
+          </p>
+          <p>
+            <strong>駅名:</strong><%= nearest_station.station %>
+          </p>
+          <p>
+            <strong>徒歩分数:</strong><%= nearest_station.time %>分
+          </p>
+
+
+    <% end %>
+    </div>
+
+</div>
